# TON3S

./: .env.production.example  .eslintrc.json  .gitignore  .htaccess  .lintstagedrc.json  .prettierrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Caddyfile  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  index.html  package-lock.json  package.json  script.js  skaffold.yaml  styles.css
.github/workflows/: ci.yml  deploy.yml
.husky/: pre-push
backend/: Dockerfile  package-lock.json  package.json  vitest.config.js
backend/__tests__/: appVersion.test.js  http-endpoints.test.js  mediaUpload.test.js  mediaUploadPinned.test.js  ssrf.test.js  websocket-proxy.test.js
backend/src/: index.js
docs/: CHECKPOINT.md  README.md  architecture.md  contributing.md  deployment.md  development.md  faq.md  getting-started.md  nostr-guide.md  self-hosting.md  user-guide.md  versioning.md
docs/developers/: README.md  backend-guide.md  contributing.md  deployment-and-operations.md  frontend-guide.md  local-setup.md  system-architecture.md  testing-and-quality.md  troubleshooting.md
docs/users/: README.md  import-export.md  media-uploads.md  nostr-publishing.md  privacy-and-security.md  quick-start.md  troubleshooting.md  (+1 more)
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.js  vite.config.js  vitest.config.js
frontend/wasm/: Cargo.toml
frontend/wasm/src/: lib.rs
k8s/: Chart.yaml  cluster-tls-setup.yaml  values.yaml
landing/: _headers  index.html
scripts/: vps-setup.sh
(+73 files in other folders)
