[package]
name = "ton3s-signer"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
k256 = { version = "0.13", default-features = false, features = ["schnorr", "std"] }
getrandom = { version = "0.2", features = ["js"] }
zeroize = { version = "1", features = ["derive"] }
sha2 = "0.10"
bech32 = "0.11"
hex = { version = "0.4", default-features = false }

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true
